# week2/docs/swagger.json
@@ -105,13 +105,11 @@
                 "summary": "Update an actor",
                 "parameters": [
                     {
-                        "description": "Actor payload",
-                        "name": "params",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.ActorRequest"
-                        }
+                        "type": "integer",
+                        "description": "actorId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -120,6 +118,30 @@
                         "schema": {
                             "$ref": "#/definitions/entity.Actor"
                         }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete an actor with the given ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Actor"
+                ],
+                "summary": "Delete an actor",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "actorId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Actor deleted successfully"
                     }
                 }
             }
