# week2/internal/controller/http/v1/actor_handler.go
@@ -84,7 +84,8 @@ func (handler *ActorHandler) Create(c *gin.Context) {
 // @Description Update an actor
 // @Tags Actor
 // @Accept json
-// @Param  params body model.ActorRequest true "Actor payload"
+// @Param id path int true "actorId"
+// @RequestBody model.ActorRequest true "Actor payload"
 // @Produce  json
 // @Router /actors/{id} [put]
 // @Success 200 {object} entity.Actor
@@ -111,4 +112,32 @@ func (handler *ActorHandler) Update(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, model.HttpResponse[entity.Actor]{Message: "Success", Data: updatedActor})
+}
+
+// @Summary Delete an actor
+// @Description Delete an actor with the given ID
+// @Tags Actor
+// @Produce json
+// @Param id path int true "actorId"
+// @Router /actors/{id} [delete]
+// @Success 204 "Actor deleted successfully"
+func (handler *ActorHandler) Delete(c *gin.Context) {
+	//check param id
+	id := c.Param("id")
+	parsedId, err := strconv.ParseInt(id, 10, 64)
+	if err != nil {
+
+		c.JSON(http.StatusBadRequest, model.HttpResponse[any]{Message: err.Error(), Data: nil})
+	}
+
+	err = handler.actorService.DeleteActor(c.Request.Context(), parsedId)
+	if err != nil {
+		if err.Error() == "record not found" {
+			c.JSON(http.StatusBadRequest, model.HttpResponse[any]{Message: "Actor not found", Data: nil})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, model.HttpResponse[any]{Message: err.Error(), Data: nil})
+		return
+	}
+	c.JSON(http.StatusOK, model.HttpResponse[any]{Message: "Actor deleted successfully", Data: nil})
 }
